# spill

./: .gitignore  ARCHITECTURE.md  Makefile  NOTES.md  README.md  distribute_options.yaml  notes.md  pubspec.yaml  social-copy.md
archiver/: archive-config.json  index.js  package-lock.json  package.json
bare/: builtins.json  index.js  index.js.full  package-lock.json  package.json
crawler/: index.js  package-lock.json  package.json  seeds.json
deploy/: .env.example  .env.iran-war.example  Dockerfile.archiver  Dockerfile.crawler  Dockerfile.frontend  deploy-site.sh  deploy-unredact.sh  docker-compose.iran-war.yml  docker-compose.yml  load-data.sh  nginx.conf  nginx.conf.template  setup.sh  wick-proxy.js
epstein-archive/: next.config.js  package-lock.json  package.json
epstein-files/: .env.example  README.md  archive-config.json  docker-compose.yml  site.config.ts
epstein-ingest/: catalog.js  index-search.js  package.json  stats.js
frontend/: package-lock.json  package.json  tailwind.config.ts
ingest/: backfill-html-thumbs.js  backfill-missing-thumbs.js  backfill-pdf-thumbs.js  backfill-text.js  catalog.js  cleanup-entities.js  dedup-entities.js  deep-extract.js  describe-photos.js  embed.js  enrich-entities.js  extract-dates.js  extract-ds10-images.js  extract-gps.js  extract-pdf-photos.js  generate-social-copy.js  ingest.js  package-lock.json  package.json  reconstruct-efta143287.js  reconstruct-thread.js  run-all-pdf-keywords.sh  run-post-ds10.sh  (+8 more)
native/: CMakeLists.txt  build_macos.sh  samizdat_bridge.c  samizdat_bridge.h
native/include/: rlimit.h
(+225 files in other folders)
